# LinuxDalvik

./: CMakeLists.txt  README.md  main.cpp
art/dalvikvm/: CMakeLists.txt
compat/: CMakeLists.txt  compat_log.c  compat_log.cpp
compat/include/log/: log.h  logd.h
dalvik/: CMakeLists.txt
dalvik/dexopt/: CMakeLists.txt  OptMain.cpp
dalvik/dx/: CMakeLists.txt
dalvik/libdex/: CMakeLists.txt  ZipArchive.cpp
dalvik/vm/: Debugger.cpp
dalvik/vm/alloc/: DlMalloc.h
dalvik/vm/native/: dalvik_system_Zygote.cpp
dalvik/vm/oo/: Class.cpp
libcore/: CMakeLists.txt
libcore/luni/src/main/native/: libcore_io_OsConstants.cpp  org_apache_harmony_xml_ExpatParser.cpp
libnativehelper/: CMakeLists.txt
test/: build_dex.py
test/java/com/test/: HelloWorld.java
